added @tyleransom reference

--- a/lyx/references.bib
+++ b/lyx/references.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for florian at 2019-03-31 15:22:44 +0200 
+%% Created for florian at 2019-04-03 10:41:14 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{ransom2018labor,
+	Author = {Ransom, Tyler},
+	Date-Added = {2019-04-03 10:41:08 +0200},
+	Date-Modified = {2019-04-03 10:41:08 +0200},
+	Institution = {working paper},
+	Title = {Labor Market Frictions and Moving Costs of the Employed and Unemployed},
+	Year = {2018}}
 
 @article{schmutz,
 	Abstract = {{We build a dynamic model of migration where, in addition to standard relocation costs, workers face spatial frictions that decrease their ability to compete for distant job opportunities. We estimate the model on a matched employer--employee panel dataset describing labour market transitions within and between the 100 largest French cities. Our identification strategy is based on the premise that frictions affect the frequency of job transitions, while mobility costs impact the distribution of accepted wages. We find that: (1) controlling for spatial frictions reduces mobility cost estimates by one order of magnitude; (2) the urban wage premium is driven by better opportunities for local job-to-job transitions in larger cities; (3) migration reduces lifetime inequalities by providing insurance against unsatisfactory initial location draws; (4) labour mobility policies based on relocation subsidies are inefficient, unlike switching from nationwide to local minimum wages.}},
