--- a/lyx/model-online.tex
+++ b/lyx/model-online.tex
@@ -26,7 +26,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Textclass specific LaTeX commands.
 \numberwithin{figure}{section}
 \numberwithin{table}{section}
-\numberwithin{equation}{section}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% User specified LaTeX commands.
 \usepackage{natbib}
@@ -52,6 +51,8 @@
 
 %% definitions
 \def\thesection{\Alph{section}}
+\renewcommand{\theequation}{\Roman{equation}}
+
 
 \makeatother
 
@@ -62,16 +63,19 @@ The Effect of Homeownership on the Option Value of Regional Migration}
 Sciences Po}
 \date{\today}
 \maketitle
-\begin{abstract}
-This is the online appendix with additional material to the version
-appearing in Quantitative Economics.
-\end{abstract}
-\textbf{JEL-Codes: }J6, R23, R21
+
+
+\tableofcontents
+
+% \begin{abstract}
+% This is the online appendix with additional material to the paper \emph{The Effect of Homeownership on the Option Value of Regional Migration} appearing in Quantitative Economics.
+% \end{abstract}
+% \textbf{JEL-Codes: }J6, R23, R21
 
 \section{Introduction and Notation}
 
 This is the online appendix for \emph{The Effect of Homeownership on
-the Option Value of Regional Migration }available on my website at \url{https://floswald.github.io/pdf/homeownership-appendix.pdf} as well as on the dedicated website of Quantitative Economics \url{http://qeconomics.org/}.
+the Option Value of Regional Migration}. The appendix is available on my website at \url{https://floswald.github.io/pdf/homeownership-appendix.pdf} as well as on the dedicated website of Quantitative Economics \url{http://qeconomics.org/}.
 In this document I number sections alphabetically (A, B, ...) and
 equations with roman numbers (I, II, ...). Standard latin numbering
 (1, 2, ...) refers to the main text.
@@ -85,15 +89,14 @@ in section \ref{M-subsec:Dim-Reduce}.
 \subsection{Data Description and Problem Outline\label{subsec:DimReduce-Data}}
 
 Here we present detailed results for the regional house price and
-income data. This part is related to section \ref{M-subsec:Income-not-IID} in the main text. The main issue we face can easily be illustrated with a series of figures which show the time series of regional prices and incomes. Starting with figures \ref{fig:Regional-House-Price-data} we see the relationship between a national house price index with it's regional counterparts. Figure \ref{fig:Regional-Income-data} shows the same for the regional income data. What is noteworthy in both cases is that each regional series seems strongly correlated with the national series, however, each region in a different kind of way.
+income data. This part is related to section \ref{M-subsec:Income-not-IID} in the main text. The main issue we face can easily be illustrated with a series of figures which show the time series of regional prices and incomes. Starting with figures \ref{fig:Regional-House-Price-data} we see the relationship between a national house price index with it's regional counterparts in the raw data. Figure \ref{fig:Regional-Income-data} shows the same for the regional income data. What is noteworthy in both cases is that each regional series seems strongly correlated with the national series, however, each region in a different kind of way.
 
 
 \begin{figure}
 \begin{centering}
 \includegraphics[scale=0.8]{/Users/florian.oswald/Dropbox/research/mobility/output/data/sipp/agg_reg_p}
 \par\end{centering}
-\caption{Regional House Price indices vs National average. FHFA house price
-index.\label{fig:Regional-House-Price-data}}
+\caption{Regional House Price indices vs National average in the data. This dataset uses the first observation in SIPP data (1996) to project the median house value by region backwards until 1967, using the FHFA house price index for each Census Division.\label{fig:Regional-House-Price-data}}
 \end{figure}
 
 \begin{figure}
@@ -145,8 +148,7 @@ $p$ from raw (i.e. not detrended) time series.\label{tab:Autocorrs}}
 
 \subsection{Factor Model}
 
-Remember that the factor model relating aggregate factors $\mathbf{F}$
-to regional prices is 
+In the main text I propose a factor model to reduce the 9-dimensional process for a regional price. The aggregate factor $\mathbf{F}$ has two components and evolves according to the following model:
 \begin{eqnarray}
 \mathbf{F}_{t} & = & A\mathbf{F}_{t-1}+\nu_{t-1}\nonumber \\
 \nu_{t} & \sim & N\left(\begin{bmatrix}0\\
@@ -154,9 +156,10 @@ to regional prices is
 \end{bmatrix},\Sigma\right)\label{eq:VAR-process-agg}\\
 \mathbf{F}_{t} & = & \begin{bmatrix}Q_{t}\\
 P_{t}
-\end{bmatrix}\nonumber 
+\end{bmatrix}.\nonumber 
 \end{eqnarray}
-and that the mapping into regions $d$ is deterministally given assumed
+
+The mapping from aggregate $\mathbf{F}_{t}$ into regions $d$ is assumed
 to be
 \begin{eqnarray}
 \begin{bmatrix}q_{dt}\\
@@ -175,21 +178,13 @@ p_{dt}
 \end{eqnarray}
 
 
-\subsection{Model Estimates and Performance}
+\subsection{Factor Model Estimates and Performance}
 
-\begin{figure}
-\begin{centering}
-\includegraphics[scale=0.8]{../../../Dropbox/research/mobility/output/data/sipp/VAR_reg_p}
-\par\end{centering}
-\caption{This figure shows the observed and predicted time series for mean
-income by Census Division. The prediction is obtained from the VAR
-model in \eqref{eq:VAR-reg-determ}, which relates the aggreate series
-$\left\{ Q_{t},P_{t}\right\} _{t=1968}^{2012}$ to mean labor productivity
-$\left\{ q_{dt}\right\} _{t=1968}^{2012}$ for each region $d$\emph{.
-}Agents use this prediction in the model, i.e. from observing an aggregate
-value $\mathbf{F}_{t}=\left(P_{t},Q_{t}\right)$ they infer a value
-for $q_{dt}$\emph{ }for each region above. \emph{\label{fig:mapping-P-p}}}
-\end{figure}
+The estimates for aggregate model \eqref{eq:VAR-process-agg} are given in the main text. Here we show estimates for model \eqref{eq:VAR-process-1} in table \ref{tab:Aggregate-to-Regional-VAR}. We see that each region has separate outcome equations for both $q_d$ and $p_d$, parameterized by different coefficients $\mathbf{a}_{d}$. Finally, the residuals between both outcome equations $q_d$ and $p_d$ are allowed to be correlated.
+
+Moving on to gauging the prediction quality of this model, consider figure \ref{fig:mapping-Y-y} which is the counterpart to figure \ref{M-fig:mapping-P-p} in the main text. As was visible there, the model is able to successfully predict most movements in the regional series, taking as input only the two-dimensional factor $\mathbf{F}_{t}$.
+
+
 
 \begin{table}
 \begin{centering}
@@ -205,6 +200,21 @@ the aggregate factors $\left(Q_{t},P_{t}\right)$ to regional income
 and house price $\left(q_{dt},p_{dt}\right)$. \label{tab:Aggregate-to-Regional-VAR}}
 \end{table}
 
+
+
+\begin{figure}
+\begin{centering}
+\includegraphics[scale=0.8]{../../../Dropbox/research/mobility/output/data/sipp/VAR_reg_y}
+\par\end{centering}
+\caption{This figure shows the observed and predicted time series for mean
+income by Census Division. The prediction is obtained from the VAR
+model in \eqref{eq:VAR-reg-determ}, which relates the aggreate series
+$\left\{ Q_{t},P_{t}\right\} _{t=1968}^{2012}$ to mean labor productivity
+$\left\{ q_{dt}\right\} _{t=1968}^{2012}$ for each region $d$\emph{.
+}Agents use this prediction in the model, i.e. from observing an aggregate
+value $\mathbf{F}_{t}=\left(P_{t},Q_{t}\right)$ they infer a value
+for $q_{dt}$\emph{ }for each region above. \emph{\label{fig:mapping-Y-y}}}
+\end{figure}
 
 \subsection{Transformation of Aggregate to Regional Shocks\label{subsec:Transformation-of-Aggregate}}
 
@@ -235,16 +245,18 @@ $q_{dt}$\emph{. \label{fig:shock-reg-model-illustrate}}}
 
 \subsection{State level vs Division level\label{subsec:State-Division}}
 
-Tables \ref{tab:state-vs-region-p} and \ref{tab:state-vs-region-y}
-show the results from regressions of the form
-\begin{align*}
-q_{st} & =\beta_{0}+\beta_{1}q_{dt}+u_{st},s\in d,t=1967,\dots,2012\\
-p_{st} & =\alpha_{0}+\alpha_{1}p_{dt}+u_{st},s\in d,t=1967,\dots,2012
-\end{align*}
+An important question is how much information is lost in terms of price variation by looking at Census Divisions, rather than States, for example. In this subsection I show that the Division level index captures a very large share of the variation in state-level indices. I have both prices available at state level, hence I can form $q_{st},p_{st}$ for state $s$ in period $t$, and run the following regression model:
+
+\begin{align}
+q_{st} & =\beta_{0}+\beta_{1}q_{dt}+u_{st},s\in d,t=1967,\dots,2012\nonumber\\
+p_{st} & =\alpha_{0}+\alpha_{1}p_{dt}+u_{st},s\in d,t=1967,\dots,2012 \label{eq:state-vs_division}
+\end{align}
 
 The aim of those regressions is to measure how much state level variation
 is captured by the corresponding Divison level indices $q_{dt}$ and
-$p_{dt}$.
+$p_{dt}$. 
+Tables \ref{tab:state-vs-region-p} and \ref{tab:state-vs-region-y}
+show the results. The main interest lies, however, in the implied $R^2$ of each regression, as a summary statistic of how much of the state level variation is captured by the simple models in \ref{eq:state-vs_division}. Those are in table \ref{tab:-region-state-rsquared}.
 
 \begin{table}
 \begin{centering}
@@ -268,6 +280,14 @@ on corresponding Division level indices $p_{dt},q_{dt}$.\label{tab:-region-state
 
 
 \section{Individual Income Process}
+
+For ease of reading, I reproduce here equation \eqref{M-eq:indiv-labor-empirical}
+in the main text:
+\begin{eqnarray*}
+\ln y_{ijdt} & = & \beta_{0}+\eta_{d}\ln q_{dt}+\beta_{1}j_{it}+\beta_{2}j_{it}^{2}+\beta_{3}j_{it}^{3}+\beta_{4}\text{college}_{it}+z_{it}
+\end{eqnarray*}
+where $\text{college}_{it}=1$ if $i$ has a college degree, zero
+else, and where $z_{it}$ are the regression residuals. Results from this estimation are shown in table \ref{tab:Regional-2-indiv-income}.
 
 \begin{sidewaystable}
 \begin{centering}
@@ -295,27 +315,25 @@ have the same level of average income.\label{fig:age-profiles}}
 
 \subsection{Estimation of $G_{move}$\label{sec:Copula-Estimation}}
 
-In a first step I estimate the marginal distributions of $z_{idt}$
-and $z_{ikt+1}$ for all movers. These are the cross-sectional distributions
-of residuals $z_{it}$ and $z_{it+1}$ from the regression in expression
-\eqref{eq:copula-margins-1}, which is estimated for all movers. The
-move takes place in period $t$, such that by assumption, $z_{it}$
-is the residual wage in origin location $d$, and $z_{it+1}$ is the
-residual wage in the new location $k$. The proceedure relies crucially
+To specify the transition matrix of movers' $z$, I require a measure of each mover's rank in the respective distribution of $z$ in both origin and destination location. Ultimately I want know how persistent $z$ ranks are, when moving across regions.  To operationalize this, I assume that net of a shift in the mean, income distributions are identical across regions. This allows me to compare ranks across different regions. To this end, I estimate the following model of log income for all individuals who move in period $t$:
+
+\begin{equation}
+\ln y_{idt}=\beta_{0}+\beta_{1}\text{college}_{it}+\delta p(\text{age}_{it})+\gamma_{d}+z_{it}\label{eq:copula-margins-1}
+\end{equation}
+where $p(\text{age})$ is a third order polynomial in age and $\gamma_{d}$ is a Division fixed effect. Notice the slight difference to the income equation \eqref{M-eq:indiv-labor-empirical} in the main text, which allows the fixed effect to vary over time. This is not of interest to recover the rank of $z$ in a stationary distribution. 
+
+From \eqref{eq:copula-margins-1} we obtain cross sectional distributions for $z_{it}$ (i.e. $z$ in current location) and $z_{it+1}$ in the new location $k$. The procedure relies crucially
 on the assumption that individuals have to move to the new region
-before they can discover $z_{t+1}$. One could account for apotential
+before they can discover $z_{t+1}$. One could account for a potential
 selection effect on $z_{t}$ by moving estimation of this part into
 the structural model and jointly estimate behavioural and wage related
 parameters. The model provides a set of exclusion restrictions that
 would allow to do this in theory. Identification of a potential selection
 effect may be difficult, however, because the sample of movers is
-relatively small. 
-\begin{equation}
-\ln y_{idt}=\beta_{0}+\beta_{1}\text{college}_{it}+\delta p(\text{age}_{it})+\beta_{2}\text{numkids}_{it}+\beta_{3}\text{sex}_{it}+\beta_{4}\text{metro}_{it}+\gamma_{d}+u_{it}\label{eq:copula-margins-1}
-\end{equation}
-Here $p(\text{age})$ is a third order polynomial in age, metro is
-an indicator for metropolitan status and $\gamma_{d}$ is a Division
-fixed effect. Remember that the copula is given as 
+relatively small.
+
+
+Remember that the copula is given as 
 \[
 C(u_{1},u_{2})=F\left(F_{1}^{-1}(u_{1}),F_{2}^{-1}(u_{2})\right)
 \]
@@ -338,8 +356,8 @@ density function of copula $C$ are shown in figure \ref{fig:Contours-of-copula}.
 \begin{centering}
 \input{\Dropbox/model/fit/copulas-edit.tex}
 \par\end{centering}
-\caption{Normal Copula estimates for the rank of wage residuals $u_{it}$ and
-$u_{it+1}$ for individuals who move in period $t$. The algorithm
+\caption{Normal Copula estimates for the standardized ranks $u_{it},u_{it+1}$ of wage residuals $z_{it}$ and
+$z_{it+1}$ for individuals who move in period $t$. The algorithm
 was not able to compute a standard error for $\rho$ because of a
 flat hessian.\label{tab:Normal-Copula-estimates}}
 \end{table}
@@ -348,8 +366,8 @@ flat hessian.\label{tab:Normal-Copula-estimates}}
 \begin{centering}
 \includegraphics[scale=0.75]{../../../Dropbox/research/mobility/output/data/sipp/z_margins}
 \par\end{centering}
-\caption{Densities of wage residual $u$in equation \eqref{eq:copula-margins-1}
-of movers today $(u)$ and tomorrow (u\_plus1).\label{fig:Densities-of-wage-z}}
+\caption{Densities of wage residual $z$ in equation \eqref{eq:copula-margins-1}
+of movers today (z) and tomorrow ($z_1$).\label{fig:Densities-of-wage-z}}
 \end{figure}
 
 \begin{figure}
@@ -364,7 +382,7 @@ matrix of movers' $z$, denoted $G_{\text{move}}$ in the text.\label{fig:Contours
 \section{Structural Model Fit\label{sec:Structural-Model-Fit}}
 
 The fit is displayed in tables \ref{tab:fit-model-and-data} and \ref{tab:fit-model-and-data-flows}.
-The upper panel of \ref{tab:fit-model-and-data} shows moments related
+The upper panel of table \ref{tab:fit-model-and-data} shows moments related
 to mobility, the lower panel shows moments related to homeownership.
 Regarding mobility, the fit is very good overall. The estimates for
 the auxiliary model defined in \eqref{M-eq:auxmod-move} representing
@@ -403,7 +421,9 @@ The model moments in table \ref{tab:fit-model-nontarget} are not
 included in the SMM objective function, that is, they are not targeted
 by the estimation algorithm. The model overpredicts total wealth accumulation,
 related to the above mentioned slight overprediction of owners at
-old age.
+old age. Finally, figure \ref{fig:fit-2} provides graphical display of auxiliary models and out of sample prediction for wealth moments.
+
+\newpage
 
 \begin{table}[p]
 \begin{centering}
@@ -429,9 +449,7 @@ enter the SMM objective function and can thus be seen as a form of
 external validation of the model.\label{tab:fit-model-nontarget}}
 \end{table}
 
-Auxiliary models and out of sample predition
-
-\begin{figure}
+\begin{figure}[p]
 \begin{adjustbox}{center}
 
 \includegraphics[scale=0.7]{../../../Dropbox/research/mobility/output/model/fit/fit_auxmods2}\includegraphics[scale=0.7]{../../../Dropbox/research/mobility/output/model/fit/fit_wealth}
@@ -460,13 +478,13 @@ On aggregate, a one percent price increase leads to 1.1\% increase
 in renter outflows, much larger than the corresponding 0.4\% increase
 in owner outflows.
 
-\begin{table}[H]
+\begin{table}[p]
 \begin{centering}
 \input{\Dropbox/model/fit/elasticities_p.tex}
 \par\end{centering}
 \caption{Elasticities with respect to an unexpected and permanently positive
 price shock by region. Statistics are computed identically as in table
-\ref{tab:elasticities}. \label{tab:elasticities-p}}
+\ref{M-tab:elasticities} in the main text. \label{tab:elasticities-p}}
 \end{table}
 
 
@@ -493,9 +511,9 @@ to their observed (and expected) level, by surprise, and proceed at
 this deviated level for ever after. The results from this are collected
 in tables \ref{tab:shocks-by-region_95_95} through \ref{tab:shocks-by-region_105_105}.
 Figure \ref{fig:Comparative-Statics} provides an illustration of
-a prototypical regional shock.
+a prototypical regional shock. Notice that the correlation between shocks is implied from the estimate of the covariance matrix for the regional price models \ref{eq:VAR-process-1}.
 
-\begin{figure}
+\begin{figure}[p]
 \begin{centering}
 \input{\Dropbox/model/data_repo/out_data_jl/shockregPaths.tex}
 \par\end{centering}
@@ -559,6 +577,7 @@ and a 6\% shock to $P$. Both $y$-axis are in thousands of dollars.
 \caption{shocks by region\label{tab:shocks-by-region_105_105}}
 \end{table}
 
+\newpage
 
 \subsection{Migration Shutdown with Changing Prices\label{subsec:Migration-Shutdown}}
 
