tex version submitted to QE production

--- a/lyx/model-online.tex
+++ b/lyx/model-online.tex
@@ -57,7 +57,7 @@
 \makeatother
 
 \begin{document}
-\title{Online Appendix to \\
+\title{Supplement to \\
 The Effect of Homeownership on the Option Value of Regional Migration}
 \author{Florian Oswald\thanks{email: \protect\url{florian.oswald@gmail.com}. }\\
 Sciences Po}
@@ -94,14 +94,14 @@ income data. This part is related to section \ref{M-subsec:Income-not-IID} in th
 
 \begin{figure}
 \begin{centering}
-\includegraphics[scale=0.8]{/Users/florian.oswald/Dropbox/research/mobility/output/data/sipp/agg_reg_p}
+\includegraphics[scale=0.8]{\Dropbox/data/sipp/agg_reg_p}
 \par\end{centering}
 \caption{Regional House Price indices vs National average in the data. This dataset uses the first observation in SIPP data (1996) to project the median house value by region backwards until 1967, using the FHFA house price index for each Census Division.\label{fig:Regional-House-Price-data}}
 \end{figure}
 
 \begin{figure}
 \begin{centering}
-\includegraphics[scale=0.8]{/Users/florian.oswald/Dropbox/research/mobility/output/data/sipp/agg_reg_y}
+\includegraphics[scale=0.8]{\Dropbox/data/sipp/agg_reg_y}
 \par\end{centering}
 \caption{Regional per capita personal income $q_{dt}$ from BEA vs the national
 average index $Q$, for which I use real per capital GDP.\label{fig:Regional-Income-data}}
@@ -204,7 +204,7 @@ and house price $\left(q_{dt},p_{dt}\right)$. \label{tab:Aggregate-to-Regional-V
 
 \begin{figure}
 \begin{centering}
-\includegraphics[scale=0.8]{../../../Dropbox/research/mobility/output/data/sipp/VAR_reg_y}
+\includegraphics[scale=0.8]{\Dropbox/data/sipp/VAR_reg_y}
 \par\end{centering}
 \caption{This figure shows the observed and predicted time series for mean
 income by Census Division. The prediction is obtained from the VAR
@@ -230,7 +230,7 @@ similar size regional shock in all regions would not seem very realistic.
 \begin{figure}
 \begin{adjustbox}{center}
 
-\includegraphics[scale=0.8]{/Users/florian.oswald/Dropbox/research/mobility/output/data/sipp/impulse_y}
+\includegraphics[scale=0.8]{\Dropbox/data/sipp/impulse_y}
 
 \end{adjustbox}
 
@@ -364,7 +364,7 @@ flat hessian.\label{tab:Normal-Copula-estimates}}
 
 \begin{figure}
 \begin{centering}
-\includegraphics[scale=0.75]{../../../Dropbox/research/mobility/output/data/sipp/z_margins}
+\includegraphics[scale=0.75]{\Dropbox/data/sipp/z_margins}
 \par\end{centering}
 \caption{Densities of wage residual $z$ in equation \eqref{eq:copula-margins-1}
 of movers today (z) and tomorrow ($z_1$).\label{fig:Densities-of-wage-z}}
@@ -372,7 +372,7 @@ of movers today (z) and tomorrow ($z_1$).\label{fig:Densities-of-wage-z}}
 
 \begin{figure}
 \begin{centering}
-\includegraphics[scale=0.8]{../../../Dropbox/research/mobility/output/model/data_repo/out_graphs_jl/mover-copula}
+\includegraphics[scale=0.8]{\Dropbox/model/data_repo/out_graphs_jl/mover-copula}
 \par\end{centering}
 \caption{Contours of copula density which is the estimate of the transition
 matrix of movers' $z$, denoted $G_{\text{move}}$ in the text.\label{fig:Contours-of-copula}}
@@ -452,7 +452,7 @@ external validation of the model.\label{tab:fit-model-nontarget}}
 \begin{figure}[p]
 \begin{adjustbox}{center}
 
-\includegraphics[scale=0.7]{../../../Dropbox/research/mobility/output/model/fit/fit_auxmods2}\includegraphics[scale=0.7]{../../../Dropbox/research/mobility/output/model/fit/fit_wealth}
+\includegraphics[scale=0.7]{\Dropbox/model/fit/fit_auxmods2}\includegraphics[scale=0.7]{\Dropbox/model/fit/fit_wealth}
 
 \end{adjustbox}
 
@@ -688,7 +688,7 @@ alive at years after 2012.
 
 \begin{figure}[H]
 \begin{centering}
-\includegraphics[scale=0.6]{../../../Dropbox/research/mobility/papers/us_divisions}
+\includegraphics[scale=0.6]{\Dropbox/../papers/us_divisions}
 \par\end{centering}
 \caption{Census Division Map, taken from \protect\url{https://www.census.gov/geo/maps-data/maps/pdfs/reference/us_regdiv.pdf}.
 The Divisions are from left to right Pacific, Moutain, West North
